<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.food.lite.nckh.detection.MainActivity2">

    <View
        android:id="@+id/viewWave"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintTop_toTopOf="parent"></View>

    <View
        android:id="@+id/background2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/logo1"
        app:layout_constraintTop_toTopOf="@+id/viewWave"
        tools:layout_editor_absoluteX="-16dp"></View>

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button"
        android:text="@string/live_detection"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    app:layout_constraintTop_toTopOf="@+id/testButton"-->

    <Button
        android:id="@+id/buttonDetect"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button"
        android:shadowRadius="5"
        android:text="@string/galarrey_detection"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/buttonListView"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button"
        android:text="@string/detailfood"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDetect"
        app:layout_constraintVertical_bias="0.339" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonListView">

        <RadioButton
            android:id="@+id/radioEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/english"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioVN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/vietnam"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <!--    app:layout_constraintTop_toBottomOf="@+id/testButton"-->

</androidx.constraintlayout.widget.ConstraintLayout>