<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.food.lite.nckh.detection.DetailFood">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/my_toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"></include>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:id="@+id/myimage"
                android:layout_width="match_parent"
                android:layout_height="700px"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="10dp"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/cach_lam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="-15dp"
                    android:gravity="right"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintRight_toLeftOf="@+id/txt_recipeAuthor"
                    tools:layout_editor_absoluteY="337dp" />

                <TextView
                    android:id="@+id/txt_recipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/namefood"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_recipeMainImg" />

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textStyle="italic|bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recipeName" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/tinh"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recipeAuthor" />

                <TextView
                    android:id="@+id/ten_tinh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold|italic"
                    android:text="@string/introduction"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recipeCountry" />

                <TextView
                    android:id="@+id/detail_gioithieu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:justificationMode="inter_word"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold|italic"
                    android:text="@string/ingredient"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recipeIngredients" />

                <TextView
                    android:id="@+id/detail_nguyenlieu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:justificationMode="inter_word"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/recipe"
                    android:textStyle="bold|italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recipeDescription" />

                <TextView
                    android:id="@+id/detail_cachlam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:paddingBottom="10dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>




</ScrollView>